# pot2dict

./: Cargo.toml  README.md  pot2dictGUI
src/: main.rs
