[package]
name = "pot2dict"
version = "0.3.2"
edition = "2021"

[dependencies]
clap = { version = "=4.5.4", features = ["derive"] }
rayon = "1.10"
memmap2 = "0.9"
indicatif = "0.17"
flate2 = "1.0"
tempfile = "3.10"
sysinfo = "0.32"
anyhow = "1.0"
memchr = "2.7"
hashbrown = "0.15"
dashmap = { version = "6.1", features = ["rayon"] }
bumpalo = "3.16"
rustc-hash = "2.0"
mimalloc = "0.1.52"
parking_lot = "0.12.5"
smallvec = "1.15.2"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
